css/others.scss
/* ... */
.team_members {
	max-width: 1000px;
	margin: 0 -10px;

	.container {
		// width: 85%;
		// max-width: 990px;
		margin: 0 auto;
	}

	.team_member {
		width: 230px;
		height: 350px;
		float: left;
		margin: 0 10px;

		.photo {
			width: 100%;
		}

		.name {
			display: block;
		}

		p {
			max-width: 100%;
			display: none;
		}
	}
}


//
.button {
//  @include inline-block;
	text-decoration: none;
	padding: 10px 15px 8px;
	line-height: 1;
	border: 1px solid $blue;
	color: $blue;
	font-size: 14px;

	&:hover {
		background-color: $blue ;
		color: white ;
	}

	&.soon {
		background-color: $blue;
		color: white !important;
		font-weight: bold !important;
		letter-spacing: 0.02em;
	}


	// play

	&.play {
		display: block;
		width: 250px;
		color: white;
		border-color: white;
		margin: 2em auto 1em;
		text-align: center;
		box-sizing: border-box;
	}
}

// COURSES PAGE

.courses_page {
	.heading {
		margin-bottom: 0;
	}


	.container + .container {
		margin-top: 30px;
		padding-top: 30px;
		border-top: 1px solid #eee;

		.course_card {
			pointer-events: none;
		}
	}
}



//

#about_project {
	padding-top: 0;

	.container {
		margin: 0 auto;

		p {
			max-width: 700px;
		}

		ul li {
			max-width: 650px;
		}
	}

	article {
		border-bottom: 1px solid #eee;
		padding-bottom: 50px;
		max-width: 700px;

		&:last-child {
			border-bottom: 0;
		}
	}

	.h2 {
		margin: 50px 0 10px;
		text-align: left;
	}

	.h3 {
		margin: 10px 0 10px;
		text-align: left;
		font-weight: bold;
	}


	.h2+.h3 {
		margin-top: 20px;
	}

	p+.h3 {
		margin-top: 40px;
	}
}
// MODAL

.modal {
	position: fixed;
	top: 60px;
	left: 0;
	right: 0;
	bottom: 0;
	background-color: #fff;
	background-color: rgba(0,0,0,.8);
	z-index: 99;
	display: none;

	.modal_content {
		width: 600px;
		height: 400px;
		position: absolute;
		top: 50%;
		left: 50%;
		margin: -200px 0 0 -300px;
		background-color: #fff;
		box-shadow: 0 2px 1px rgba(34, 25, 25, 0.1);
	}

	.close {
		display: block;
		position: absolute;
		top: 20px;
		right: 20px;
		width: 17px;
		height: 17px;
		background-image: url("../img/close.png");
		background-repeat: no-repeat;
		background-size: 17px;
		cursor: pointer;
	}

	.video {
		width: 560px;
		height: 315px;
		position: absolute;

		right: 20px;
		bottom: 20px;
		left: 20px;
	}
}

// PLAY ANIMATION

@keyframes scale-animation {
		0%     { transform: scale(1); } /* 0ms initial values */
		10%  { transform: scale(1.15); }     /* 150ms half of animation */
		20% { transform: scale(1); }     /* 2150ms still at half of animation */
		30% { transform: scale(1.15); } /* 2300ms back to initial */
		40%   { transform: scale(1); } /* 6300ms still at initial */
		100%   { transform: scale(1); }
	}

	.button.play {
		animation-name: scale-animation;
		animation-iteration-count: infinite;
		animation-direction: alternate;
		animation-duration: 3300ms;
		animation-delay: 2s;
	}

// RESPONSIVE VIDEO
.virtual-project {
}

.video {
	position: relative;
}


.video-wrapper {
	height: 0;
	overflow: hidden;
	padding-bottom: 56.25%; // For ratio 16:9. 75% if ratio is 4:3
	position: relative;

	embed,
	object,
	iframe {
		@include position(absolute, 0 null null 0);
		@include size(100%);
	}
}

// FUNDRAISING PAGE

#fundraising_heading {
	.button.orange {
		background-color: orange;
		color: white;
		border-color: orange;
		text-transform: none;
		font-weight: bold;
		font-size: 16px;
		line-height: 22px;
	}
}

#fundraising_project {
	.h2 {
		text-transform: none;
		color: orange;
		font-weight: bold;
	}
	.section {
		.container {
		}
	}
	.two_column {
		display: flex;
		.item {
			width: 50%;
			margin: auto;
		}
	}
	.button.orange {
		background-color: orange;
		color: white;
		border-color: orange;
		text-transform: none;
		font-weight: bold;
		font-size: 16px;
		margin-top: 25px;
		line-height: 22px;
	}
}

